# livekit-plugins-yandex

./: .env.example  .flake8  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  example_plugin_usage.py  pyproject.toml
livekit/plugins/yandex/: __init__.py  _utils.py  exceptions.py  log.py  models.py  stt.py  yandex_api.py
tests/: README.md  __init__.py  conftest.py  test_fixture_validation.py
tests/e2e/: conftest.py
tests/e2e/agent_e2e/: IMPLEMENTATION_PLAN.md  README.md  __init__.py  conftest.py  test_basic_livekit_integration.py
tests/e2e/agent_e2e/infrastructure/: __init__.py  agent_fixtures.py  participant_simulator.py  room_manager.py
tests/e2e/agent_e2e/validation_utils/: __init__.py  test_audio_simulator.py  test_validation_utils.py  validation_utils.py
tests/e2e/plugin_e2e/: README.md  conftest.py  test_real_audio_processing.py
tests/functional/: conftest.py  test_stt.py
tests/integration/: conftest.py  test_stt.py
tests/unit/: __init__.py  conftest.py  test_stt.py
utils/: README.md  __init__.py  fixture_generator.py
